= ActiveMerchant CHANGELOG

* Remove test_result_from_cc_number from DataCash. Improve unit test coverage [cody]
* Update CyberSourceGateway to support avs and cvv results. Remove test_result_from_cc_number. [cody]
* Remove match information from CVVResult [cody]
* Remove Response#card_data. The application has access to the information anyway [cody]
* Return the last 4 digits of the card number from the Response instead of the masked number [cody]
* Actually use the shipping address in TrustCommerce [cody]
* Update TrustCommerceGateway to support avs and cvv results. Remove test_result_from_cc_number. Automatically fallback to SSL POST if the TCLink library is not available. Add additional customer information to the requests. [cody]
* Fix remote CardStreamGateway tests [cody]
* Map merchant AVS codes to street and postal match codes [cody]
* Update CardStreamGateway to support avs and cvv data [cody]
* Remove merchant_data hash. Add additional CVV codes [cody]
* Update QuickpayGateway to support merchant_data hash. Remove test_result_from_cc_number. [cody]
* Update LinkpointGateway to support merchant_data hash. Remove test_result_from_cc_number. [cody]
* Update PsigateGateway to support merchant_data hash. Remove test_result_from_cc_number. [cody]
* Update MonerisGateway to support merchant_data hash. Remove test_result_from_cc_number. [cody]
* Remove AVS Message and CVV2 Message from params hash in Authorize.net [cody]
* Update BrainTreeGateway to support merchant_data hash [cody]
* Update PaypalGateway to support merchant_data hash [cody]
* Update Payflow to support merchant_data hash [cody]
* Add card data to PayJunction response. PayJunction does not return the CVV or AVS result codes. Remote test_result_from_cc_number from PayJunction. [cody]
* Rename CCVResult to CVVResult to be more aligned with ActiveMerchant's usage of the term verification value [cody]
* Remove test_result_from_cc_number from Authorize.net in favour of mocking [cody]